crates/rattler-bin/src/snapshots/rattler__tests__help-auth.snap
---
source: crates/rattler-bin/src/main.rs
expression: redact(subcommand.render_long_help().to_string())
---
Login to prefix.dev or anaconda.org servers to access private channels

Usage: rattler auth [OPTIONS] <COMMAND>

Commands:
  login   Store authentication information for a given host
  logout  Remove authentication information for a given host
  token   Print the stored authentication token for a given host
  status  Show stored authentication entries and non-secret token metadata
  help    Print this message or the help of the given subcommand(s)

Options:
  -v, --verbose
          Log verbose

      --offline
          Disable network access and use only locally cached data

  -h, --help
          Print help
