crates/rattler-bin/src/snapshots/rattler__tests__help-compare-packages.snap
---
source: crates/rattler-bin/src/main.rs
expression: redact(subcommand.render_long_help().to_string())
---
Compare two conda packages and report the differences.

Reports changed metadata, changed dependencies/constraints/run exports, changed/added/removed files in the package payload (based on `info/paths.json`) and changed/added/removed files in the info section.

Usage: rattler compare-packages [OPTIONS] <LEFT> <RIGHT>

Arguments:
  <LEFT>
          Path or URL of the first conda package (.tar.bz2 or .conda)

  <RIGHT>
          Path or URL of the second conda package (.tar.bz2 or .conda)

Options:
  -v, --verbose
          Log verbose

      --offline
          Disable network access and use only locally cached data

  -h, --help
          Print help (see a summary with '-h')
