crates/rattler-bin/src/snapshots/rattler__tests__help-create.snap
---
source: crates/rattler-bin/src/main.rs
expression: redact(subcommand.render_long_help().to_string())
---
Create a conda environment from package listing

Resolves and installs the specified packages into a target prefix, pulling from the configured channels.

Usage: rattler create [OPTIONS] <SPECS>...

Arguments:
  <SPECS>...
          Package specs to install

Options:
  -c, --channel <CHANNELS>
          Channel to search for packages.
          
          Example: -c conda-forge -c main

      --constraint <SPEC>
          Additional constraint that the solution must satisfy.
          
          A constrained package is not necessarily part of the solution, but if it is, it must match the constraint.
          
          Example: --constraint "numpy<2" --constraint "openssl=3.*"

      --platform <PLATFORM>
          The platform to solve for
          
          [default: [PLATFORM]]

      --virtual-package <VIRTUAL_PACKAGE>
          Virtual packages to use for solving, e.g. __glibc=2.28.
          
          When omitted, the virtual packages of the current system are detected.

      --solver <SOLVER>
          SAT Solver backend to use
          
          [possible values: resolvo, libsolv]

      --timeout <TIMEOUT>
          Request solver timeout in milliseconds

      --strategy <STRATEGY>
          Solver strategy to use

          Possible values:
          - highest:       Resolve the highest compatible version for every package
          - lowest:        Resolve the lowest compatible version for every package
          - lowest-direct: Resolve the lowest compatible version for direct dependencies but the highest compatible for transitive dependencies

      --channel-priority <CHANNEL_PRIORITY>
          How to prioritize packages from different channels

          Possible values:
          - strict:   A package is only taken from the first channel it is found in
          - flexible: Candidates from a higher-priority channel are exhausted before falling back to the next channel, regardless of version
          - disabled: Packages can come from any channel, the version takes precedence

      --only-deps
          Only include dependencies of the package specs, not the specs themselves

      --no-deps
          Only include the package specs themselves, without their dependencies

      --exclude-newer <EXCLUDE_NEWER>
          Exclude packages that have been published after the specified timestamp. Can be specified as a timestamp (e.g., "2006-12-02T02:07:43Z") or as a date (e.g., "2006-12-02"). When using a date, packages from the entire day are included

      --dry-run
          Simulate command without installation

  -p, --prefix <TARGET_PREFIX>
          Target prefix (environment path) for package installation
          
          [default: .prefix]
          [alias: --target-prefix]

  -v, --verbose
          Log verbose

      --offline
          Disable network access and use only locally cached data

  -h, --help
          Print help (see a summary with '-h')
