crates/rattler-bin/src/snapshots/rattler__tests__help-download.snap
---
source: crates/rattler-bin/src/main.rs
expression: redact(subcommand.render_long_help().to_string())
---
Download an arbitrary file

Usage: rattler download [OPTIONS] <URL>

Arguments:
  <URL>
          URL of the file to download

Options:
  -o, --output <OUTPUT>
          Output path for the downloaded file, or '-' to write to stdout

  -v, --verbose
          Log verbose

      --offline
          Disable network access and use only locally cached data

  -h, --help
          Print help
