crates/rattler-bin/src/snapshots/rattler__tests__help-exec.snap
---
source: crates/rattler-bin/src/main.rs
expression: redact(subcommand.render_long_help().to_string())
---
Run a command and install it in a temporary environment

Usage: rattler exec [OPTIONS] [COMMAND]...

Arguments:
  [COMMAND]...
          The executable to run, followed by any arguments

Options:
  -s, --spec <SPEC>
          Matchspecs of packages to install. When omitted, the package is guessed from the command name

  -w, --with <WITH>
          Matchspecs of package to install, while also guessing a package from the command

  -c, --channel <CHANNELS>
          Channels to search for packages

  -p, --platform <PLATFORM>
          The platform to create the environment for
          
          [default: [PLATFORM]]

      --force-reinstall
          Always create a new environment, even if one already exists

      --list[=<LIST>]
          Before executing the command, list packages in the environment Specify `--list=some_regex` to filter the shown packages

      --no-modify-ps1
          Disable modification of PS1 to indicate the temporary environment

  -v, --verbose
          Log verbose

      --offline
          Disable network access and use only locally cached data

  -h, --help
          Print help
