crates/rattler-bin/src/snapshots/rattler__tests__help-fetch-file.snap
---
source: crates/rattler-bin/src/main.rs
expression: redact(subcommand.render_long_help().to_string())
---
Read a file from inside a remote conda package

Usage: rattler fetch-file [OPTIONS] <URL> <PATH>

Arguments:
  <URL>
          URL of the conda package (.conda or .tar.bz2 archive)

  <PATH>
          Path of the file inside the package (e.g. "info/index.json" or "lib/libfoo.so")

Options:
  -v, --verbose
          Log verbose

      --offline
          Disable network access and use only locally cached data

  -h, --help
          Print help
