crates/rattler-bin/src/snapshots/rattler__tests__help-help.snap
---
source: crates/rattler-bin/src/main.rs
expression: redact(subcommand.render_long_help().to_string())
---
Print this message or the help of the given subcommand(s)

Usage: rattler help [COMMAND]

Commands:
  auth                Login to prefix.dev or anaconda.org servers to access private channels
  compare-packages    Compare two conda packages and report the differences
  completion          Generates a completion script for a shell
  create              Create a conda environment from package listing
  download            Download an arbitrary file
  fetch-file          Read a file from inside a remote conda package
  info                Show information about this `rattler` build and the host system
  inspect             Inspect package metadata from a remote conda package
  search              Search for packages in conda channels using glob or regex patterns
  solve               Solve a conda environment without installing it
  whoneeds            Show packages that depend on the given package (reverse dependencies)
  shell-hook          Print the shell activation hook for a conda prefix to stdout
  virtual-packages    Print detected virtual packages
  install-menu        Install menu items for an installed package
  remove-menu         Remove installed menu items for a package
  run                 Run a command in an activated conda environment
  extract             Extract one or more local or remote conda packages
  link                Link an extracted package into a prefix
  inject-into-prefix  Add one or more conda package archives to a prefix without solving
  remove-from-prefix  Remove one or more installed conda packages from a prefix without solving
  upload              Upload options
  list                Search for packages in conda channels using glob or regex patterns
  exec                Run a command and install it in a temporary environment
  help                Print this message or the help of the given subcommand(s)
