crates/rattler-bin/src/snapshots/rattler__tests__help-inspect.snap
---
source: crates/rattler-bin/src/main.rs
expression: redact(subcommand.render_long_help().to_string())
---
Inspect package metadata from a remote conda package

Usage: rattler inspect [OPTIONS] <URL>

Arguments:
  <URL>
          URL of the conda package to inspect (.conda or .tar.bz2 archive)

Options:
      --limit <LIMIT>
          Number of files to print (a negative value prints all files)
          
          [default: 10]

      --json
          Print the package metadata as JSON

  -v, --verbose
          Log verbose

      --offline
          Disable network access and use only locally cached data

  -h, --help
          Print help
